# mash-firmware

./: Cargo.toml  README.md  partitions.csv  setup.md
.cargo/: config.toml
src/: main.rs
src/page/: index.html
